--- a/flags.html
+++ b/flags.html
@@ -29,8 +29,8 @@
 
 			<!-- Flag of Trinidad and Tobago -->
 			<div class="flag"> <!-- Outline around the flag -->
-				<div class="whitet"></div>
-				<div class="redt"></div>
+				<div class="white2"></div>
+				<div class="red2"></div>
 				<div class="stripe"></div>
 				
 			</div>
